--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular-user-data-management",
   "version": "0.0.0",
   "scripts": {
+    "db": "json-server db.json",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -28,6 +29,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
